Fixed navbar not stuck to top

--- a/styles/CharSheet.css
+++ b/styles/CharSheet.css
@@ -1,5 +1,6 @@
 body {
     overflow-x: hidden;
+    padding-top: 56px;
 }
 
 input:read-only {
